# EvalRag

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: functional_requirements.md  guide_llm_agents.md  tasks.md
docs/adrs/: 001-architecture-pattern.md
examples/: experiment_template.py  hello_world.py  hello_world_results.json
examples/data/: eval_dataset.json  knowledge_base.txt
examples/reports/: demo_hybrid_vs_bm25_vs_vector.html  demo_hybrid_vs_bm25_vs_vector.json
experiments/: template.py
experiments/hello_world/: README.md  run.py
experiments/hello_world/reports/: 20260705133337.html  20260705133337.json
src/evalrag/: __init__.py  cli.py  registry.py
src/evalrag/chunkers/: token.py
src/evalrag/core/: experiment.py  protocols.py  types.py
src/evalrag/datasets/: registry.py  sample.json
src/evalrag/evaluators/: ragas.py
src/evalrag/exploration/: inspector.py  reporter.py
src/evalrag/extractors/: ocr.py  unstructured.py
src/evalrag/generators/: ollama.py  openai.py
src/evalrag/ranking/: metrics.py
src/evalrag/retrievers/: hybrid.py  keyword.py  vector.py
src/evalrag/stores/: chromadb.py
src/evalragkit/: __init__.py  cli.py  registry.py
src/evalragkit/chunkers/: token.py
src/evalragkit/core/: experiment.py  protocols.py  types.py
src/evalragkit/datasets/: registry.py
src/evalragkit/embedders/: ollama.py  openai.py  sentence_transformer.py
src/evalragkit/evaluators/: ragas.py
tests/: conftest.py  test_chunkers.py  test_exploration.py  test_extractors.py  test_ranking.py  test_retrievers.py
tests/fixtures/: qa_dataset.json  sample.txt
(+11 files in other folders)
