[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalrag"
version = "0.0.0"  # placeholder — real version is stamped as major.minor.<UTC timestamp> at build time
description = "Composable RAG evaluation library for experiment-based testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ameen Demiry", email = "mameen@demiry.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
chromadb = ["chromadb>=0.4"]
openai = ["openai>=1.0"]
unstructured = ["unstructured[all-docs]"]
ragas = ["ragas>=0.1"]
bm25 = ["rank-bm25"]
ocr = ["easyocr", "Pillow"]
cli = ["typer>=0.9"]
all = [
    "evalrag[chromadb,openai,unstructured,ragas,bm25,ocr,cli]",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
evalrag = "evalrag.cli:app"

[project.urls]
Homepage = "https://github.com/mameen/evalrag"
Repository = "https://github.com/mameen/evalrag"

[tool.hatch.build.targets.wheel]
packages = ["src/evalrag"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
